tests/build/cases/property/return_type_is_not_ui_node.stderr
error[E0277]: the trait bound `NotUiNode: UiNode` is not satisfied
 --> cases/property/return_type_is_not_ui_node.rs:6:59
  |
5 | #[property(context, allowed_in_when = false)]
  | --------------------------------------------- required by a bound introduced by this call
6 | pub fn invalid_output(child: impl UiNode, input: bool) -> NotUiNode {
  |                                                           ^^^^^^^^^ the trait `UiNode` is not implemented for `NotUiNode`
  |
  = help: the following other types implement trait `UiNode`:
            <implementers-list>
note: required by a bound in `__invalid_output_set::box_fix`
 --> cases/property/return_type_is_not_ui_node.rs:5:1
  |
5 | #[property(context, allowed_in_when = false)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `__invalid_output_set::box_fix`
  = note: this error originates in the attribute macro `property` (in Nightly builds, run with -Z macro-backtrace for more info)
